--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -15,11 +15,12 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-    <script type="module" crossorigin src="/assets/index-B2rxa0_W.js"></script>
-    <link rel="stylesheet" crossorigin href="/assets/index-B1cv6YYr.css">
+    <script type="module" crossorigin src="/static/assets/index-B2rxa0_W.js"></script>
+    <link rel="stylesheet" crossorigin href="/static/assets/index-B1cv6YYr.css">
   </head>
 
   <body>
-    <div id="root"></div>
+    <div id="root"></div>
+
   </body>
 </html>
